--- a/style.css
+++ b/style.css
@@ -7,13 +7,37 @@
 
 .square {
     height: 40px;
-    width: 40px;    
+    width: 40px;   
+    position: relative; 
 }
 
-.beige {
-    background-color: rgb(110, 110, 98);
+.square svg {
+    height: 30px;
+    width: 30px;
+    margin: 5px;
+    position: relative;
+    z-index: 9;
+}
+
+path {
+    position: relative;
+    z-index: -10;
+}
+
+.pieces {
+    position: relative;
+    z-index: 9;
+}
+
+
+.being {
+    background-color: rgb(109, 109, 106);
 }
 
 .brown {
     background-color: rgb(169, 43, 43);
+}
+
+.white {
+    fill: rgb(255, 255, 255);
 }
